# Django-rest-framework-React-demo

./: README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml  django.yml
backend/: Dockerfile  requirements.txt
backend/app/: serializers.py  urls.py  views.py
backend/backend/: settings.py  urls.py
backend/frontend/: urls.py  views.py
backend/templates/: base.html  index.html  login.html  register.html
frontend/: Dockerfile
